--- a/.github/workflows/github-workflow.yml
+++ b/.github/workflows/github-workflow.yml
@@ -13,7 +13,7 @@ jobs:
   CI:
     uses: BrunoBrasolin/workflow-template/.github/workflows/net-docker-ci.yml@main
     with:
-      image: worker-email
+      applicationName: worker-email
     secrets: inherit
   
   CD:
